Minor align fix.

--- a/stylesheets/bizzloggr.scss
+++ b/stylesheets/bizzloggr.scss
@@ -192,6 +192,7 @@ section {
 
     .intro {
         padding: 5em;
+        text-align: center;
         .intro_image { display: none; }
         h1, p { width: 100%; }
         h1 {
